--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.kusitms.LoginActivity">
+        <activity android:name=".Adapter_Activity"></activity>
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.example.kusitms.SplashActivity"></activity>
-        <activity android:name="com.example.kusitms.MyFragStateAdapter" />
-        <activity android:name="com.example.kusitms.MainActivity"></activity>
+        <activity android:name=".SplashActivity" />
+        <activity android:name=".MyFragStateAdapter" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
