--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kusitms">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WriteActivity"></activity>
+        <activity android:name=".WriteActivity_Activity"></activity>
+        <activity android:name=".WriteActivity" />
         <activity android:name=".Adapter_Activity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
@@ -21,7 +24,6 @@
         <activity android:name=".SplashActivity" />
         <activity android:name=".MyFragStateAdapter" />
         <activity android:name=".MainActivity" />
-
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
