--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".WriteActivity_Place"/>
+        <activity android:name=".placeTab.WriteActivity_Place"/>
     </application>
 
 </manifest>
