--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha02'
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:19.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
 
