activity search page xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".placeTab.Info_Place"></activity>
+        <activity android:name=".activityTab.Search_Activity"></activity>
+        <activity android:name=".placeTab.Info_Place" />
         <activity android:name=".activityTab.Info_Activity" />
         <activity android:name=".activityTab.WriteActivity_Activity" />
         <activity android:name=".personTab.WriteActivity_Person" />
