--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".placeTab.WriteActivity_Place" />
         <activity android:name=".personTab.Info_Person" />
+        <activity android:name=".mypageTab.History_Activity"/>
     </application>
 
 </manifest>
